# user_sls_ecommerce

./: .gitignore  Cargo.toml  package-lock.json  package.json  serverless.yml
.serverless/: cloudformation-template-update-stack.json  serverless-state.json
create/: Cargo.toml
create/src/: database.rs  main.rs  user.rs
edit/: Cargo.toml
edit/src/: database.rs  main.rs  parameters.rs  user.rs
login/: Cargo.toml
