[package]
name = "edit"
version = "0.1.0"
authors = ["Eduardo Sabino <eduardo@amo.delivery>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master"}
rust_sls_common = { git = "https://github.com/EdSabino/rust_sls_common/", tag = "1.0.0"}
serde_json = "1.0"
mongodb = { version = "1.1.1", features = ["async-std-runtime"], default-features = false }
serde = "1.0.118"
sha2 = "0.9.2"
regex = "1.4.2"
chrono = "0.4"
